kubernasty/manifests-old-v1/crust/traefik/ingresses/traefik-dashboard.in.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-dashboard-mw@kubernetescrd
spec:
  rules:
    - host: traefik.${clusterTld}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
  tls:
    - secretName: micahrl-dot-me-wildcard-backing-secret
      hosts:
        - traefik.${clusterTld}
